# qsnapshot

./: CMakeLists.txt  COPYING  README.rst  index.html  install.cmake  install.cmake.in  qsnapshot.qrc  qsnapshot.rc  qsnapshot_config.h.cmake  style.css
cmake/modules/: install.cmake.in  qsnapshot_config.h.in
css/: style.css
locales/: zh_TW.ts
macosx/cocoa/: CMakeLists.txt
macosx/cocoa/include/: inspector.h  inspector.hpp
macosx/cocoa/src/: UIElementUtilities.m  inspector.mm  inspectorprivate.h
macosx/utility/: uiinspector.cpp  uiinspector_cocoa.cpp
share/pixmap/: logo.icns
src/utility/: main.cpp  uiinspector.hpp
src/widget/: abstractgrabber.cpp  abstractgrabber.hpp  focusgrabber.cpp  focusgrabber.hpp  focusgrabberstrategy.cpp  focusgrabberstrategy.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mainwindowprivate.hpp  qsnapshot.cpp  qsnapshot.hpp  qsnapshot.ui  qsnapshotprivate.hpp  qsnapshotstrategy.cpp  qsnapshotstrategy.hpp  regiongrabber.cpp  regiongrabber.hpp  regiongrabberprivate.hpp  savingdialog.cpp  savingdialog.hpp  savingdialogprivate.hpp  snapshottimer.cpp  snapshottimer.hpp  snapshottimerprivate.hpp  windowgrabber.cpp  windowgrabber.hpp  windowgrabberprivate.hpp
unix/widget/: savingdialog.cpp  savingdialogprivate.hpp
windows/utility/: uiinspector_win.cpp
windows/widget/: qsnapshotstrategy.cpp  qsnapshotstrategy.hpp  savingdialog.cpp
x11/utility/: uiinspector.cpp  uiinspector_x11.cpp
x11/widget/: focusgrabberstrategy.cpp  focusgrabberstrategy.hpp  qsnapshotstrategy.cpp  qsnapshotstrategy.hpp  x11strategy.cpp  x11strategy.hpp
